--- a/src/main/resources/ucf/assignments/FrontPage.fxml
+++ b/src/main/resources/ucf/assignments/FrontPage.fxml
@@ -1,25 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="597.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.FrontPageController">
-    <Button layoutX="345.0" layoutY="481.0" mnemonicParsing="false" onAction="#ExitPressed" prefHeight="102.0" prefWidth="161.0" text="EXIT" textFill="#f50000">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="597.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.FrontPageController">
+    <Button layoutX="14.0" layoutY="481.0" mnemonicParsing="false" onAction="#ExitPressed" prefHeight="102.0" prefWidth="243.0" text="EXIT" textFill="#f50000">
         <font>
           <Font size="48.0" />
         </font>
     </Button>
     <Button layoutX="593.0" layoutY="481.0" mnemonicParsing="false" onAction="#SortName" prefHeight="102.0" prefWidth="243.0" text="DISPLAY" textFill="#00f50e">
-        <font>
-          <Font size="48.0" />
-        </font>
-    </Button>
-    <Button layoutX="14.0" layoutY="481.0" mnemonicParsing="false" onAction="#HelpPressed" prefHeight="102.0" prefWidth="243.0" text="HELP" textFill="#3e2e87">
         <font>
           <Font size="48.0" />
         </font>
@@ -42,7 +33,7 @@
     </TextField>
     <ListView fx:id="ListViewSerial" editable="true" layoutX="223.0" layoutY="243.0" prefHeight="225.0" prefWidth="209.0" />
     <ListView fx:id="ListViewName" editable="true" layoutX="432.0" layoutY="243.0" prefHeight="225.0" prefWidth="209.0" />
-    <SplitMenuButton fx:id="OptionsMenu" layoutX="304.0" layoutY="110.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="191.0" text="OPTIONS" textAlignment="CENTER">
+    <SplitMenuButton fx:id="OptionsMenu" layoutX="303.0" layoutY="123.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="191.0" text="OPTIONS" textAlignment="CENTER">
       <items>
           <MenuItem fx:id="Add" mnemonicParsing="false" onAction="#AddItemPressed" text="Add an Item" />
           <MenuItem fx:id="Remove" mnemonicParsing="false" onAction="#ShowListItems" text="Remove an Item" />
@@ -59,5 +50,16 @@
         </font>
     </SplitMenuButton>
    <SplitMenuButton fx:id="AllItems" layoutX="640.0" layoutY="213.0" prefHeight="30.0" prefWidth="209.0" text="PERMANENTLY DELETE ITEM" />
+   <TextField fx:id="SearchBar" layoutX="548.0" layoutY="136.0" onAction="#Searched" prefHeight="25.0" prefWidth="288.0" text="SEARCH by Name or Serial Number (Case Sensitive)" />
+   <SplitMenuButton fx:id="ItemsFound" layoutX="640.0" layoutY="243.0" mnemonicParsing="false" onAction="#PopulateSearch" prefHeight="30.0" prefWidth="209.0" text="      View Items Found" textAlignment="CENTER">
+      <font>
+         <Font size="14.0" />
+      </font>
+   </SplitMenuButton>
+   <TextArea prefHeight="121.0" prefWidth="850.0" text="                 Welcome to the Inventory Database&#10;                           Select Options to Begin">
+      <font>
+         <Font size="33.0" />
+      </font>
+   </TextArea>
 
 </AnchorPane>
